Prevent shift on form submit.

--- a/frontend/src/pages/ContactPage.module.scss
+++ b/frontend/src/pages/ContactPage.module.scss
@@ -22,6 +22,10 @@
   }
 }
 
-.error {
+.errorMessage {
   color: #990000;
+}
+
+.successMessage {
+  color: #009900;
 }
